# loop-engineering

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TEST.md  USAGE.md  VERIFY.md  agent-with-0d3e52c8.diff  agent-with-7c1db41e.diff  agent-with-f610728e.diff  pyproject.toml  tasks.md
.claude/scripts/: build_prompt.py  migrate_tasks.py  notify.ps1  notify.py  open-diff.ps1  project_vars.py  task_cleanup.py  task_done.py  task_line.py  task_pick.py  task_update.py  taskhelper.py
.claude/skills/loop-test-init/: SKILL.md
.claude/skills/loop-verify/: SKILL.md
.claude/skills/loop-verify-init/: SKILL.md
.claude/skills/task-add/: SKILL.md
.claude/skills/task-merge/: SKILL.md
.claude/skills/task-runner/: SKILL.md
.claude/skills/verifier-api/: SKILL.md
.claude/skills/verifier-cli/: SKILL.md
.claude/skills/verifier-desktop/: SKILL.md
.claude/skills/verifier-web/: SKILL.md
.github/workflows/: release.yml
desktop/: Cargo.toml
desktop/src/: click-tray.rs  config.rs  download.rs  icon_data.rs  main.rs  server.rs  settings.rs  test-tray.rs  tray.rs
openspec/changes/improve-claude-git-robustness/: design.md  proposal.md  tasks.md
openspec/changes/migrate-desktop-to-winit/: design.md  proposal.md  tasks.md
packaging/: release.py
src/loop_engineering/: __init__.py  cli.py  config.py  control.py  git_utils.py  path_utils.py  presets.py  registry.py  runlog.py  setup.py  task_id.py  taskhelper.py  utils.py  verify.py
src/loop_engineering.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/claude/: python-server.md  unity-tolua.md
templates/commands/: add-task.md  runloop.md
templates/config/: settings.local.json
templates/scripts/: build_prompt.py  git_default_branch.py  notify.py  project_vars.py  register-protocol.ps1  task_changes.py  task_cleanup.py  task_done.py  task_line.py  task_pick.py  taskhelper.py
tests/: conftest.py  test_config.py  test_control.py  test_runlog.py  test_task_id.py  test_task_parser.py
(+93 files in other folders)
